Fixes z-index misordering

--- a/www/style.css
+++ b/www/style.css
@@ -32,6 +32,8 @@ h1.instrument {
   vertical-align: top;
   width: 100%;
   height: 40px;
+  z-index: 5;
+  position: absolute;
 }
 
 #bar > div {
@@ -51,7 +53,7 @@ h1.instrument {
   height: 100%;
   position: absolute;
   overflow: visible;
-  z-index: -1;
+  z-index: 2;
 }
 
 .rowContainer {
@@ -164,8 +166,11 @@ figure:hover {
   width: 225px; 
   text-shadow: 1px 1px 1px #000; 
   right: 0;
+  top: 40px;
   float: right;
   padding: 10px 10px 10px 10px;
+  position: absolute;
+  z-index: 4;
 }
 
 #selector {
@@ -174,7 +179,7 @@ figure:hover {
   width: 100%;
   height: 40px;
   bottom: 0;
-  z-index: 1;
+  z-index: 5;
 }
 
 #container { 
